# OSource

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Editor.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  README.md  Sandbox.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
Editor/src/: CMakeLists.txt  Editor.vcxproj  Editor.vcxproj.filters  EditorLayer.h  INSTALL.vcxproj  INSTALL.vcxproj.filters  imgui.ini  main.cpp
OSource/src/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  OSource.h  OSource.vcxproj  OSource.vcxproj.filters  Sandbox.sln
OSource/src/OSource/: Application.h  Camera.cpp  Camera.h  Entrypoint.h  InputManager.cpp  InputManager.h  Layer.h  Log.cpp  Log.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  Timestep.cpp  Timestep.h
Sandbox/src/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  Sandbox.vcxproj  Sandbox.vcxproj.filters  SandboxLayer.h  main.cpp
lib/glad/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLAD.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  glad-generate-files.vcxproj  glad-generate-files.vcxproj.filters  glad.vcxproj  glad.vcxproj.filters
lib/glad/src/: glad.c
lib/glfw/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  uninstall.vcxproj  uninstall.vcxproj.filters
lib/glfw/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc
(+11 files in other folders)
